1、调整cmakelist文件 2、修改库文件

--- a/redis_demo/CMakeLists.txt
+++ b/redis_demo/CMakeLists.txt
@@ -3,15 +3,19 @@
 #
 cmake_minimum_required (VERSION 2.8.7)
 
-file(GLOB_RECURSE REDIS_DEMO_SRCS ${PROJECT_SOURCE_DIR}/redis_demo/*.cpp)
-
 set(CMAKE_CXX_STANDARD 17)
 
-IF(CMAKE_CL_64)
-    message("platform info: x64")
-ELSE()
-    message("platform info: x86")
-ENDIF(CMAKE_CL_64)
+file(GLOB_RECURSE REDIS_DEMO_SRCS ${PROJECT_SOURCE_DIR}/redis_demo/*.cpp)
+
+# 将源代码添加到此项目的可执行文件。
+add_executable (redis_demo  ${REDIS_DEMO_SRCS})
+
+# include
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common)
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/redis_demo/)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common/3rd/cpp_redis/includes)
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common/3rd/tacopie/includes)
 
 if(WIN32)
     message("platform info: win32")
@@ -21,21 +25,16 @@ if(WIN32)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 
     # lib
-    link_libraries(${PROJECT_SOURCE_DIR}/common/3rd/cpp_redis/lib/cpp_redis_x64_mt.lib)
-    link_libraries(${PROJECT_SOURCE_DIR}/common/3rd/tacopie/lib/tacopie_x64_mt.lib)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common/3rd/cpp_redis/lib/cpp_redis_x64_mt.lib)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common/3rd/tacopie/lib/tacopie_x64_mt.lib)
 elseif(UNIX)
-    message(platform: unix)
+    message("platform info: unix")
     # a
-    link_libraries(${PROJECT_SOURCE_DIR}/common/3rd/cpp_redis/a/libcpp_redis_x64.a)
-    link_libraries(${PROJECT_SOURCE_DIR}/common/3rd/tacopie/a/libtacopie_x64.a)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common/3rd/cpp_redis/a/libcpp_redis.a)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/common/3rd/tacopie/a/libtacopie.a)
+
+    # pthread
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    find_package(Threads REQUIRED)
+    target_link_libraries(${PROJECT_NAME} PUBLIC Threads::Threads)
 endif()
-
-# include
-include_directories(${PROJECT_SOURCE_DIR}/common)
-include_directories(${PROJECT_SOURCE_DIR}/redis_demo/)
-
-include_directories(${PROJECT_SOURCE_DIR}/common/3rd/cpp_redis/includes)
-include_directories(${PROJECT_SOURCE_DIR}/common/3rd/tacopie/includes)
-
-# 将源代码添加到此项目的可执行文件。
-add_executable (redis_demo  ${REDIS_DEMO_SRCS})
